recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  faireCarre();
}

def faireCarre(){
  double x = 100;
  avancex();
}